small refactoring in ChoosePeopleController